Header Nav bar styled

--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smart Budget Planner</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Smart Budget Planner</h1>
+    <header class="header">
+      <div class="container header-flex">
+        <h1 class="logo">💰 Smart Budget Planner</h1>
+
+        <div class="nav-user">
+          <nav class="nav">
+            <a href="index.html">Dashboard</a>
+            <a href="add.html">Add Transaction</a>
+            <a href="transactions.html">Transactions</a>
+          </nav>
+
+          <div class="user-info">
+            <span id="userNameDisplay"></span>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main class="container">
+      <h2>Smart Budget Planner</h2>
+    </main>
   </body>
 </html>
