--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
     <main class="container">
       <h2>Smart Budget Planner</h2>
     </main>
+
+    <footer class="footer">
+      <p>© 2026 Smart Budget Planner</p>
+    </footer>
   </body>
 </html>
