summary cards added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,27 @@
     </header>
 
     <main class="container">
-      <h2>Smart Budget Planner</h2>
+      <section class="summary">
+        <div class="card income">
+          <h3>Total Income</h3>
+          <p id="totalIncome">0</p>
+        </div>
+
+        <div class="card savings">
+          <h3>Total Saved</h3>
+          <p id="totalSaved">0</p>
+        </div>
+
+        <div class="card expense">
+          <h3>Total Expenses</h3>
+          <p id="totalExpenses">0</p>
+        </div>
+
+        <div class="card balance">
+          <h3>Balance</h3>
+          <p id="balance">0</p>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
