--- a/transactions.html
+++ b/transactions.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add Transaction</title>
+    <title>Financial Report</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -26,7 +26,9 @@
     </header>
 
     <main class="container">
-      <h2>Add New Transaction</h2>
+      <section>
+        <h2>All Transactions</h2>
+      </section>
     </main>
 
     <footer class="footer">
