--- a/transactions.html
+++ b/transactions.html
@@ -34,5 +34,7 @@
     <footer class="footer">
       <p>© 2026 Smart Budget Planner</p>
     </footer>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
