--- a/add.html
+++ b/add.html
@@ -32,5 +32,7 @@
     <footer class="footer">
       <p>© 2026 Smart Budget Planner</p>
     </footer>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
