--- a/transactions.html
+++ b/transactions.html
@@ -28,6 +28,7 @@
     <main class="container">
       <section>
         <h2>All Transactions</h2>
+        <div id="transactionList" class="transaction-grid"></div>
       </section>
     </main>
 
