Rule Breakdown in dashboard

--- a/index.html
+++ b/index.html
@@ -47,6 +47,27 @@
           <p id="balance">0</p>
         </div>
       </section>
+
+      <section class="rule-section">
+        <h2 id="ruleTitle">📊 Budget Rule Breakdown</h2>
+
+        <div class="rule-grid">
+          <div class="rule-card">
+            <h4 id="needsLabel">Needs</h4>
+            <p id="needsLimit">0</p>
+          </div>
+
+          <div class="rule-card">
+            <h4 id="wantsLabel">Wants</h4>
+            <p id="wantsLimit">0</p>
+          </div>
+
+          <div class="rule-card">
+            <h4 id="savingsLabel">Savings</h4>
+            <p id="savingsTarget">0</p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
